--- a/src/main/resources/public/template/auth/authEdit.html
+++ b/src/main/resources/public/template/auth/authEdit.html
@@ -42,7 +42,7 @@
                 </div>
                 <div class="edit-row flex-column">
                     <label th:text="#{auth.label.authDesc}"></label>
-                    <textarea id="txtAuthDesc" name="txtAuthDesc" class="textarea-scroll-wrapper"
+                    <textarea id="txtAuthDesc" name="txtAuthDesc" class="z-textarea textarea-scroll-wrapper"
                               maxlength="200" rows="7" th:text="${authDetail?.authDesc}"></textarea>
                 </div>
                 <div class="edit-row flex-column">
