--- a/src/main/resources/public/template/cmdb/class/classEdit.html
+++ b/src/main/resources/public/template/cmdb/class/classEdit.html
@@ -46,7 +46,7 @@
                 <div class="edit-row flex-column">
                     <label class="form-title" th:text="#{cmdb.class.label.description}" for="txtClassDesc"></label>
                     <textarea id="txtClassDesc" name="txtClassDesc" th:maxlength="500" th:rows="7"
-                              class="textarea-scroll-wrapper"></textarea>
+                              class="z-textarea textarea-scroll-wrapper"></textarea>
                 </div>
                 <div class="edit-row flex-column">
                     <div class="under-bar">
