--- a/src/main/resources/public/template/cmdb/type/typeEdit.html
+++ b/src/main/resources/public/template/cmdb/type/typeEdit.html
@@ -52,7 +52,7 @@
                 <div class="edit-row flex-column">
                     <label th:text="#{cmdb.type.label.description}" for="typeDesc"></label>
                     <textarea id="typeDesc" name="typeDesc" th:maxlength="200" th:rows="7"
-                              class="textarea-scroll-wrapper" text=""></textarea>
+                              class="z-textarea textarea-scroll-wrapper" text=""></textarea>
                 </div>
                 <div class="edit-row flex-column">
                     <label th:text="#{cmdb.type.label.icon}" for="typeIcon"></label>
