--- a/src/main/resources/public/template/code/codeEdit.html
+++ b/src/main/resources/public/template/code/codeEdit.html
@@ -64,7 +64,7 @@
                 <div class="edit-row flex-column">
                     <label class="form-title" th:text="#{code.label.description}" for="txtCodeDesc"></label>
                     <textarea id="txtCodeDesc" name="txtCodeDesc" th:maxlength="200" th:rows="7"
-                              class="textarea-scroll-wrapper" th:text="${codeDetail?.codeDesc}"></textarea>
+                              class="z-textarea textarea-scroll-wrapper" th:text="${codeDetail?.codeDesc}"></textarea>
                 </div>
                 <div class="edit-row flex-column">
                     <div class="under-bar">
