--- a/src/main/resources/public/template/faq/faqEdit.html
+++ b/src/main/resources/public/template/faq/faqEdit.html
@@ -43,7 +43,7 @@
                         <span class="required"></span>
                     </label>
                     <textarea id="faqContent" name="faqContent" th:text="${faq?.faqContent}"
-                              maxlength="2048" rows="7" class="textarea-scroll-wrapper"></textarea>
+                              maxlength="2048" rows="7" class="z-textarea textarea-scroll-wrapper"></textarea>
                 </div>
                 <div class="flex-row justify-content-end edit-row">
                     <div class="btn-list">
