--- a/src/main/resources/public/template/formDesigner/formDesigner.html
+++ b/src/main/resources/public/template/formDesigner/formDesigner.html
@@ -248,7 +248,7 @@
         </label>
         <input type="text" class="z-input" id="newFormName" data-validation-required="true">
         <label class="field-label" for="newFormDesc" th:text="#{form.label.description}"></label>
-        <textarea class="textarea-scroll-wrapper" id="newFormDesc" rows="3" ></textarea>
+        <textarea class="z-textarea textarea-scroll-wrapper" id="newFormDesc" rows="3" ></textarea>
     </div>
 </template>
 <template id="documentModalTemplate">
