--- a/src/main/resources/public/template/cmdb/ci/ciEditModal.html
+++ b/src/main/resources/public/template/cmdb/ci/ciEditModal.html
@@ -49,7 +49,8 @@
                 <label class="field-label" for="ciDesc">
                     <span th:text="#{cmdb.ci.label.description}"></span>
                 </label>
-                <textarea id="ciDesc" class="textarea-scroll-wrapper" rows="7" maxlength="500" th:text="${ciData?.ciDesc}"></textarea>
+                <textarea id="ciDesc" class="z-textarea textarea-scroll-wrapper" rows="7" maxlength="500"
+                          th:text="${ciData?.ciDesc}"></textarea>
             </div>
             <!--클래스 -->
             <div class="flex-column edit-row">
