--- a/src/main/resources/public/template/formDesigner/formSearch.html
+++ b/src/main/resources/public/template/formDesigner/formSearch.html
@@ -119,7 +119,7 @@
                        `<label class="field-label" for="form_name">${i18n.msg('form.label.name')}<span class="required"></span></label>` +
                        `<input type="text" id="form_name" class="z-input" maxlength="50" value="${data !== undefined ? data.name : ''}" ${data !== undefined && data.isView ? 'readonly' : ''}>` +
                        `<label class="field-label" for="form_description">${i18n.msg('form.label.description')}</label>` +
-                       `<textarea rows="3" class="textarea-scroll-wrapper" id="form_description" maxlength="256" ${data !== undefined && data.isView ? 'readonly' : ''}>${data !== undefined ? data.desc : ''}</textarea>` +
+                       `<textarea rows="3" class="z-textarea textarea-scroll-wrapper" id="form_description" maxlength="256" ${data !== undefined && data.isView ? 'readonly' : ''}>${data !== undefined ? data.desc : ''}</textarea>` +
                     `</div>`;
         }
 
@@ -341,7 +341,7 @@
                        `<label class="field-label" for="form_name">${i18n.msg('form.label.name')}<span class="required"></span></label>` +
                        `<input type="text" id="form_name" class="z-input" maxlength="50">` +
                        `<label class="field-label" for="form_description">${i18n.msg('form.label.description')}</label>` +
-                       `<textarea rows="3" class="textarea-scroll-wrapper" id="form_description" maxlength="256"></textarea>` +
+                       `<textarea rows="3" class="z-textarea textarea-scroll-wrapper" id="form_description" maxlength="256"></textarea>` +
                        `<div class="file-uploader-edit">` +
                            `<label class="file-uploader-title field-label">${i18n.msg('form.label.importFile')}<span class="required"></span></label>` +
                            `<div id="dropZoneFiles"></div>` +
