--- a/src/main/resources/public/template/process/processSearch.html
+++ b/src/main/resources/public/template/process/processSearch.html
@@ -117,7 +117,7 @@
                        `<label class="field-label" for="process_name">${i18n.msg('process.label.name')}<span class="required"></span></label>` +
                        `<input type="text" class="z-input" id="process_name" maxlength="50" value="${data !== undefined ? data.name : ''}" ${data !== undefined && data.isView ? 'readonly' : ''}>` +
                        `<label class="field-label" for="process_description">${i18n.msg('process.label.description')}</label>` +
-                       `<textarea rows="3" class="textarea-scroll-wrapper" id="process_description" maxlength="256" ${data !== undefined && data.isView ? 'readonly' : ''}>${data !== undefined ? data.description : ''}</textarea>` +
+                       `<textarea rows="3" class="z-textarea textarea-scroll-wrapper" id="process_description" maxlength="256" ${data !== undefined && data.isView ? 'readonly' : ''}>${data !== undefined ? data.description : ''}</textarea>` +
                     `</div>`;
         }
 
@@ -375,7 +375,7 @@
                        `<label class="field-label" for="process_name">${i18n.msg('process.label.name')}<span class="required"></span></label>` +
                        `<input type="text" class="z-input" id="process_name" maxlength="50">` +
                        `<label class="field-label" for="process_description">${i18n.msg('process.label.description')}</label>` +
-                       `<textarea rows="3" class="textarea-scroll-wrapper" id="process_description" maxlength="256"></textarea>` +
+                       `<textarea rows="3" class="z-textarea textarea-scroll-wrapper" id="process_description" maxlength="256"></textarea>` +
                        `<div class="file-uploader-edit">` +
                            `<label class="file-uploader-title field-label">${i18n.msg('process.label.importFile')}<span class="required"></span></label>` +
                            `<div id="dropZoneFiles"></div>` +
