--- a/src/main/resources/public/template/notice/noticeEdit.html
+++ b/src/main/resources/public/template/notice/noticeEdit.html
@@ -38,7 +38,7 @@
                            disabled/>
                 </div>
                 <div class="flex-column edit-row">
-                    <label class="switch">
+                    <label class="z-switch">
                         <input type="checkbox" id="popYn" name="popYn" onchange="setDisplay('popTab',this)"
                                th:checked="${notice?.popYn == true}">
                         <span></span>
@@ -74,7 +74,7 @@
                     </div>
                 </div>
                 <div class="flex-column edit-row">
-                    <label class="switch">
+                    <label class="z-switch">
                         <input type="checkbox" id="topNoticeYn" name="topNoticeYn" onchange="setDisplay('topNoticeTab',this)"
                                th:checked="${notice?.topNoticeYn == true}">
                         <span></span>
