--- a/src/main/resources/public/template/user/userEdit.html
+++ b/src/main/resources/public/template/user/userEdit.html
@@ -162,7 +162,7 @@
             </div>
             <div class="flex-column edit-row">
                 <h3 class="sub-title under-bar bold" th:text="#{user.label.usageStatus}"></h3>
-                <label class="switch">
+                <label class="z-switch">
                     <input type="checkbox" id="usageStatus" name="usageStatus"
                            th:checked="${users?.useYn == null || users?.useYn == true}">
                     <span></span>
