--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -2946,7 +2946,7 @@ button .icon-plus {
   bottom: 0;
   width: 13.75rem;
   height: 9.375rem;
-  background-color: #333D47;
+  background-color: #222529;
   z-index: 100;
 }
 .gnb .navigation .breadcrumb {
@@ -3013,25 +3013,25 @@ button .icon-plus {
   mask-repeat: no-repeat;
   -webkit-mask-position: center;
   mask-position: center;
-  background: #929AA6;
+  background: #8B9094;
 }
 .gnb .navigation-config > div:hover {
-  background: #283238;
+  background: #505559;
 }
 .gnb .logo {
   position: fixed;
   width: 13.75rem;
-  height: 3.75rem;
+  height: 3.375rem;
   padding: 0.9375rem 1.25rem 0.9375rem 1.25rem;
-  background-color: #333D47;
+  background-color: #222529;
   z-index: 100;
 }
 .gnb .menu {
   position: fixed;
-  top: 3.75rem;
+  top: 3.375rem;
   width: 13.75rem;
-  height: calc(100vh - 9.375rem - 3.75rem);
-  background-color: #333D47;
+  height: calc(100vh - 9.375rem - 3.375rem);
+  background-color: #222529;
   z-index: 100;
   overflow: auto;
 }
@@ -3039,8 +3039,25 @@ button .icon-plus {
   right: 0.375rem;
 }
 .gnb .menu-area .gnb {
-  padding: 0.9375rem 1.25rem 0.9375rem 1.25rem;
+  padding: 0.5rem 1.25rem 0.5rem 1.25rem;
   vertical-align: middle;
+}
+.gnb .menu-area .gnb .token-count {
+  position: absolute;
+  margin: 0.3125rem 9rem;
+  padding: 0.125rem 0.625rem;
+  border-radius: 1.25rem;
+  -webkit-border-radius: 1.25rem;
+  -moz-border-radius: 1.25rem;
+  line-height: inherit;
+  font-size: 0.688rem;
+  font-weight: 500;
+  background-color: #8B9094;
+  color: #E1E6EA;
+}
+.gnb .menu-area .gnb .token-count.active {
+  color: #FFFFFF;
+  background-color: #339AF0;
 }
 .gnb .menu-area .gnb-area {
   line-height: 1.3;
@@ -3050,28 +3067,31 @@ button .icon-plus {
   margin-top: 0.3125rem;
 }
 .gnb .menu-area .gnb-area:hover {
-  background: #283238;
+  background: #505559;
 }
 .gnb .menu-area .gnb-area .gnb-link {
   cursor: pointer;
+  color: #8B9094;
+}
+.gnb .menu-area .gnb-area .gnb-link:hover {
+  color: #E1E6EA;
 }
 .gnb .menu-area .gnb-area .gnb-link .menu-name {
   display: inline-block;
   padding-left: 1.1875rem;
   font-weight: 500;
-  color: #929AA6;
   line-height: 1.3rem;
 }
 .gnb .menu-area .gnb-area .gnb-link .arrow-right {
   width: 0.75rem;
   height: 1.25rem;
-  -webkit-mask-image: url("../media/icons/icon_arrow_left.svg");
-  mask-image: url("../media/icons/icon_arrow_left.svg");
+  -webkit-mask-image: url("../media/icons/icon_menu_arrow_right.svg");
+  mask-image: url("../media/icons/icon_menu_arrow_right.svg");
   -webkit-mask-repeat: no-repeat;
   mask-repeat: no-repeat;
   -webkit-mask-position: center;
   mask-position: center;
-  background: #929AA6;
+  background: #8B9094;
   padding: 0 0.375rem 0 0;
   margin-left: auto;
   float: right;
@@ -3079,24 +3099,28 @@ button .icon-plus {
 .gnb .menu-area .gnb-area .gnb-link .arrow-down {
   width: 0.75rem;
   height: 1.25rem;
-  -webkit-mask-image: url("../media/icons/icon_arrow_bottom.svg");
-  mask-image: url("../media/icons/icon_arrow_bottom.svg");
+  -webkit-mask-image: url("../media/icons/icon_menu_arrow_bottom.svg");
+  mask-image: url("../media/icons/icon_menu_arrow_bottom.svg");
   -webkit-mask-repeat: no-repeat;
   mask-repeat: no-repeat;
   -webkit-mask-position: center;
   mask-position: center;
-  background: #929AA6;
+  background: #8B9094;
   padding: 0 0.375rem 0 0;
   margin-left: auto;
   float: right;
 }
 .gnb .menu-area .gnb-area .snb-group {
   display: none;
+  background-color: #222529;
 }
 .gnb .menu-area .gnb-area .snb-area {
-  font-size: 1rem;
+  font-size: 0.875rem;
   font-weight: 400;
-  color: #929AA6;
+  color: #8B9094;
+}
+.gnb .menu-area .gnb-area .snb-area:hover {
+  background-color: #505559;
 }
 .gnb .menu-area .gnb-area .snb-area .snb-link {
   display: block;
@@ -3104,20 +3128,38 @@ button .icon-plus {
 }
 .gnb .menu-area .gnb-area .snb-area .snb-link .menu-name {
   display: inline-block;
-  padding-left: 2.4375rem;
+  padding-left: 0.625rem;
 }
 .gnb .menu-area .gnb-area .snb-area .snb-link.snb {
   padding: 0.5rem 1.25rem 0.5rem 1.25rem;
-  color: #929AA6;
+  color: #CFD5D9;
+}
+.gnb .menu-area .gnb-area .snb-area .snb-link.snb:hover {
+  color: #E1E6EA;
+}
+.gnb .menu-area .gnb-area .snb-area .snb-link .icon-gnb-sub {
+  margin-left: 40px;
+  padding-left: 6px;
 }
 .gnb .menu-area .gnb-area .snb-area .snb-link.active {
-  background-color: #283238;
+  background-color: #171D21;
 }
 .gnb .menu-area .gnb-area .snb-area .snb-link.active .menu-name {
   color: #FFFFFF;
 }
+.gnb .menu-area .gnb-area .snb-area .snb-link.active .dot {
+  width: 0.25rem;
+  height: 0.25rem;
+  -webkit-mask-image: url("../media/icons/gnb/icon_gnb_sub_dot.svg");
+  mask-image: url("../media/icons/gnb/icon_gnb_sub_dot.svg");
+  -webkit-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
+  -webkit-mask-position: center;
+  mask-position: center;
+  background: #339AF0;
+}
 .gnb .menu-area .gnb.active {
-  background-color: #283238;
+  background-color: #171D21;
 }
 .gnb .menu-area .gnb.active .menu-name {
   color: #FFFFFF;
@@ -3135,125 +3177,125 @@ button .icon-plus {
   background: #FFFFFF;
 }
 .gnb .icon-gnb-board {
-  width: 1.25rem;
-  height: 1.25rem;
+  width: 1.5rem;
+  height: 1.5rem;
   -webkit-mask-image: url("../media/icons/gnb/icon_gnb_board.svg");
   mask-image: url("../media/icons/gnb/icon_gnb_board.svg");
   -webkit-mask-repeat: no-repeat;
   mask-repeat: no-repeat;
   -webkit-mask-position: center;
   mask-position: center;
-  background: #929AA6;
+  background: #8B9094;
 }
 .gnb .icon-gnb-chart {
-  width: 1.25rem;
-  height: 1.25rem;
+  width: 1.5rem;
+  height: 1.5rem;
   -webkit-mask-image: url("../media/icons/gnb/icon_gnb_chart.svg");
   mask-image: url("../media/icons/gnb/icon_gnb_chart.svg");
   -webkit-mask-repeat: no-repeat;
   mask-repeat: no-repeat;
   -webkit-mask-position: center;
   mask-position: center;
-  background: #929AA6;
+  background: #8B9094;
 }
 .gnb .icon-gnb-dashboard {
-  width: 1.25rem;
-  height: 1.25rem;
+  width: 1.5rem;
+  height: 1.5rem;
   -webkit-mask-image: url("../media/icons/gnb/icon_gnb_dashboard.svg");
   mask-image: url("../media/icons/gnb/icon_gnb_dashboard.svg");
   -webkit-mask-repeat: no-repeat;
   mask-repeat: no-repeat;
   -webkit-mask-position: center;
   mask-position: center;
-  background: #929AA6;
+  background: #8B9094;
 }
 .gnb .icon-gnb-document {
-  width: 1.25rem;
-  height: 1.25rem;
+  width: 1.5rem;
+  height: 1.5rem;
   -webkit-mask-image: url("../media/icons/gnb/icon_gnb_document.svg");
   mask-image: url("../media/icons/gnb/icon_gnb_document.svg");
   -webkit-mask-repeat: no-repeat;
   mask-repeat: no-repeat;
   -webkit-mask-position: center;
   mask-position: center;
-  background: #929AA6;
+  background: #8B9094;
 }
 .gnb .icon-gnb-download {
-  width: 1.25rem;
-  height: 1.25rem;
+  width: 1.5rem;
+  height: 1.5rem;
   -webkit-mask-image: url("../media/icons/gnb/icon_gnb_download.svg");
   mask-image: url("../media/icons/gnb/icon_gnb_download.svg");
   -webkit-mask-repeat: no-repeat;
   mask-repeat: no-repeat;
   -webkit-mask-position: center;
   mask-position: center;
-  background: #929AA6;
+  background: #8B9094;
 }
 .gnb .icon-gnb-faq {
-  width: 1.25rem;
-  height: 1.25rem;
+  width: 1.5rem;
+  height: 1.5rem;
   -webkit-mask-image: url("../media/icons/gnb/icon_gnb_faq.svg");
   mask-image: url("../media/icons/gnb/icon_gnb_faq.svg");
   -webkit-mask-repeat: no-repeat;
   mask-repeat: no-repeat;
   -webkit-mask-position: center;
   mask-position: center;
-  background: #929AA6;
+  background: #8B9094;
 }
 .gnb .icon-gnb-notice {
-  width: 1.25rem;
-  height: 1.25rem;
+  width: 1.5rem;
+  height: 1.5rem;
   -webkit-mask-image: url("../media/icons/gnb/icon_gnb_notice.svg");
   mask-image: url("../media/icons/gnb/icon_gnb_notice.svg");
   -webkit-mask-repeat: no-repeat;
   mask-repeat: no-repeat;
   -webkit-mask-position: center;
   mask-position: center;
-  background: #929AA6;
+  background: #8B9094;
 }
 .gnb .icon-gnb-config {
-  width: 1.25rem;
-  height: 1.25rem;
+  width: 1.5rem;
+  height: 1.5rem;
   -webkit-mask-image: url("../media/icons/gnb/icon_gnb_config.svg");
   mask-image: url("../media/icons/gnb/icon_gnb_config.svg");
   -webkit-mask-repeat: no-repeat;
   mask-repeat: no-repeat;
   -webkit-mask-position: center;
   mask-position: center;
-  background: #929AA6;
+  background: #8B9094;
 }
 .gnb .icon-gnb-workflow {
-  width: 1.25rem;
-  height: 1.25rem;
+  width: 1.5rem;
+  height: 1.5rem;
   -webkit-mask-image: url("../media/icons/gnb/icon_gnb_workflow.svg");
   mask-image: url("../media/icons/gnb/icon_gnb_workflow.svg");
   -webkit-mask-repeat: no-repeat;
   mask-repeat: no-repeat;
   -webkit-mask-position: center;
   mask-position: center;
-  background: #929AA6;
+  background: #8B9094;
 }
 .gnb .icon-gnb-token {
-  width: 1.25rem;
-  height: 1.25rem;
+  width: 1.5rem;
+  height: 1.5rem;
   -webkit-mask-image: url("../media/icons/gnb/icon_gnb_token.svg");
   mask-image: url("../media/icons/gnb/icon_gnb_token.svg");
   -webkit-mask-repeat: no-repeat;
   mask-repeat: no-repeat;
   -webkit-mask-position: center;
   mask-position: center;
-  background: #929AA6;
+  background: #8B9094;
 }
 .gnb .icon-gnb-cmdb {
-  width: 1.25rem;
-  height: 1.25rem;
+  width: 1.5rem;
+  height: 1.5rem;
   -webkit-mask-image: url("../media/icons/gnb/icon_gnb_cmdb.svg");
   mask-image: url("../media/icons/gnb/icon_gnb_cmdb.svg");
   -webkit-mask-repeat: no-repeat;
   mask-repeat: no-repeat;
   -webkit-mask-position: center;
   mask-position: center;
-  background: #929AA6;
+  background: #8B9094;
 }
 
 /* _alerts.scss 
@@ -6958,5 +7000,3 @@ body.modal-active {
 .tags-look .tagify__dropdown__item--active {
   color: #0088E6;
 }
-
-/*# sourceMappingURL=itsm.css.map */
